; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_json.c_pclose_obj.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_json.c_pclose_obj.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"%.*s%.*s},%.*s\00", align 1
@nlines = common dso_local global i32 0, align 4
@NL = common dso_local global i32 0, align 4
@TAB = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"%.*s%.*s}\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @pclose_obj to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pclose_obj(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %18, label %9

9:                                                ; preds = %3
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* @nlines, align 4
  %12 = load i32, i32* @NL, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @TAB, align 4
  %15 = load i32, i32* @nlines, align 4
  %16 = load i32, i32* @NL, align 4
  %17 = call i32 (i32*, i8*, i32, i32, i32, i32, ...) @pjson(i32* %10, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %11, i32 %12, i32 %13, i32 %14, i32 %15, i32 %16)
  br label %25

18:                                               ; preds = %3
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* @nlines, align 4
  %21 = load i32, i32* @NL, align 4
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* @TAB, align 4
  %24 = call i32 (i32*, i8*, i32, i32, i32, i32, ...) @pjson(i32* %19, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %20, i32 %21, i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %18, %9
  ret void
}

declare dso_local i32 @pjson(i32*, i8*, i32, i32, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
